# cpp-essence

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-example.json  Dependencies.cmake  Doxyfile  FeatureTests.cmake  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  build_all_windows.ps1  build_linux.sh  gcovr.cfg  make_bindings.sh
.github/actions/make-and-test/: action.yaml
.github/actions/setup-codebase/: action.yaml
.github/workflows/: clean.yaml  macos.yaml  ubuntu.yaml  windows.yaml
cmake/: ArmToolchain.cmake  CMakeRC.cmake  ESBoost.cmake  ESCCXXRuntime.cmake  ESCompat.cmake  ESEmscripten.cmake  ESLangCompiler.cmake  ESOpenSSL.cmake  ESPackaging.cmake  ESThirdPartyLibrary.cmake  ESUtil.cmake  ESVersion.cmake  NDKToolchain.cmake  RV1109Toolchain.cmake  RV3588Toolchain.cmake
cmake/compat/: rv3588.cmake
cmake/config/: user_globalization.cpp.in  user_globalization.hpp.in
cmake/fragments/: FindNMake.cmake
feature-testing/: std_format.cpp
include/essence/: argb_color.hpp  array.hpp  basic_string.hpp  basic_vector.hpp  boolean.hpp  char.hpp  char8_t_remediation.hpp  compat.hpp  data_view.hpp  delegate.hpp  encoding.hpp  environment.hpp  error_extensions.hpp  exception.hpp  fake_locale.h  flags.hpp  format_remediation.hpp  functional.hpp  generator.hpp  hashing.hpp  interruptable_timer.hpp  json.hpp  json_compat.hpp  json_extensions.hpp  library_state.hpp  managed_handle.hpp  math.hpp  memory.hpp  native_handle.hpp  noncopyable.hpp  numeric_conversion.hpp  optional.hpp  range.hpp  rational.hpp  rect.hpp  reflection.hpp  scope.hpp  source_location.hpp  span.hpp  spdlog_extension.hpp  (+9 more)
include/essence/abi/: json.hpp  list.hpp  map.hpp  memory.hpp  string.hpp  vector.hpp
include/essence/cli/: arg_parser.hpp  common_types.hpp  option.hpp  option_result.hpp  validation_result.hpp
include/essence/cli/abstract/: option.hpp
include/essence/crypto/: asymmetric_key.hpp  chunk_processor.hpp  common_types.hpp  digest.hpp  file_validation.hpp  ostream.hpp  pubkey_cipher_provider.hpp  symmetric_cipher_info.hpp  symmetric_cipher_provider.hpp  symmetric_cipher_util.hpp
include/essence/crypto/abstract/: chunk_processor.hpp
include/essence/globalization/: compiler.hpp  globalized_arg.hpp  simple_messages.hpp  translator.hpp
include/essence/imaging/: image_general_header.hpp  image_prober.hpp
include/essence/io/: bitstream_type_judger.hpp  cmrc_fs_operator.hpp  common_types.hpp  compresser.hpp  fs_operator.hpp  spanbuf.hpp  spanstream.hpp  stdio_watcher.hpp
include/essence/jni/: common_types.hpp  entry.hpp  global_ref.hpp  iterator.hpp  jvm.hpp  local_ref.hpp  reflector.hpp  util.hpp
include/essence/memory/: atomic_readable_buffer.hpp  generic_resource_pool.hpp  nonuniform_grid_buffer.hpp  swapping_buffer.hpp
include/essence/meta/: boolean.hpp  common_types.hpp  enum.hpp  fingerprint.hpp  friendly_name.hpp  friendly_name_base.hpp  friendly_name_vector.hpp  identifier.hpp  identifier_param.hpp  literal_string.hpp  literal_string_util.hpp  naming_convention.hpp  string_constant.hpp  struct.hpp  trivial_pair.hpp
include/essence/net/: common_types.hpp  cors.hpp  download.hpp  http_client.hpp  http_client_abstract.hpp  http_client_config.hpp  http_headers_proxy.hpp  http_listener_config.hpp  interface.hpp  interface_address_info.hpp  ipv4_address.hpp  ipv6_address.hpp  net_error.hpp  rest_api.hpp  sse_client.hpp  sse_message.hpp  sse_server.hpp  uri.hpp
lang/: CMakeLists.txt  en-US.json  zh-CN.json
src/: CMakeLists.txt  CppEssenceConfig.cmake.in  CppEssenceHeaderOnlyConfig.cmake.in  dllmain.cpp  encoding.cpp  environment.cpp  exception.cpp  interruptable_timer.cpp  jni_entry.cpp  library_state.cpp  string.cpp  thread.cpp
src/abi/: memory.cpp
src/cli/: arg_parser.cpp  common_tokens.hpp  option.cpp
src/compat/: rv1109.cpp  rv3588.cpp
src/crypto/: asymmetric_key.cpp  chunk_processing_helper.hpp  chunk_processor.cpp  chunk_processor_base64.cpp  chunk_processor_symmetric_cipher.cpp  cipher_error_builder.hpp  digest.cpp  error.cpp  error.hpp  file_validation.cpp  inout_buffer_pair.cpp  inout_buffer_pair.hpp  ostream.cpp  pubkey_cipher_provider.cpp  symmetric_cipher_provider.cpp  symmetric_cipher_util.cpp  util.cpp  util.hpp
src/crypto/params/: dh_param.cpp  ec_keygen_param.cpp  ecdh_param.cpp  ed25519_keygen_param.cpp  ed448_keygen_param.cpp  pubkey_param_impl.cpp  pubkey_param_impl.hpp  rsa_keygen_param.cpp  rsa_param.cpp  sm2_keygen_param.cpp  x25519_keygen_param.cpp  x448_keygen_param.cpp
src/globalization/: common_constants.hpp  compiler.cpp  translator.cpp
src/imaging/: bmp.cpp  extractors.cpp  extractors.hpp  image_header_extractor_impl.hpp  image_prober.cpp  jfif.cpp  png.cpp
src/io/: bitstream_type_judger.cpp  compresser.cpp  compression_routines.cpp  compression_routines.hpp  compression_zlibng.cpp  compression_zstd.cpp  native_fs_operator.cpp  stdio_watcher.cpp
src/io/abstract/: writable_buffer.hpp
src/jni/: CMakeLists.txt  CppEssenceJniSupportConfig.cmake.in  cache_key.hpp  entry.cpp  global_ref.cpp  iterator.cpp  jvm.cpp  local_ref.cpp  reflector.cpp  util.cpp
src/net/: cookie_manager.cpp  cookie_manager.hpp  cors.cpp  http_client.cpp  http_client_config.cpp  http_headers_proxy.cpp  http_listener_config.cpp  interface.cpp  ipv4_address.cpp  ipv6_address.cpp  net_error_impl.hpp  sse_client.cpp  sse_server.cpp  sse_types.hpp  uri.cpp  util.cpp  util.hpp
src/port/jni/: CMakeLists.txt  CppEssenceJniConfig.cmake.in  com_essence_CryptoUtil.cpp  com_essence_SymmetryDecryptor.cpp  com_essence_SymmetryEncryptor.cpp  entry.cpp  entry.hpp
src/port/jni/java/com/essence/: CipherMetadata.java  CipherPaddingMode.java  CryptoUtil.java  DigestMode.java  Program.java  SymmetryDecryptor.java  SymmetryEncryptor.java
src/port/wasm/: CMakeLists.txt  compression.cpp  cryptography.cpp  util.cpp  util.hpp
test/: CMakeLists.txt  cli_test.cpp  crypto_test.cpp  encoding_test.cpp  io_test.cpp  json_test.cpp  meta_test.cpp  test.cpp
tool/lang-compiler/: CMakeLists.txt  main.cpp
(+34 files in other folders)
